Fixed spacing issues in header, book image

--- a/_scss/header.scss
+++ b/_scss/header.scss
@@ -5,5 +5,5 @@ header {
 }
 
 .header-text {
-  padding-top:5em;
+  padding-top:7em;
 }
