--- a/_scss/underwood-style.scss
+++ b/_scss/underwood-style.scss
@@ -13,7 +13,7 @@ main {
   }
 
   #book-laying-down {
-    width:110%;
+    width:105%;
     margin-left:-1.5em;
     padding-bottom:5em;
   }
